--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a class="nav-link" href="#projects">Projects</a>
       <a class="nav-link" href="#contact">Contact</a>
     </nav>
-    <a class="cta" href="PRANJALI_R_W.pdf" download>Download Résumé</a>
+    <a class="cta" href="PRANJALI_R_W.pdf" download>Download Resume</a>
   </header>
 
   <!-- Hero -->
@@ -196,3 +196,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
